--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -74,7 +74,7 @@
 							</div> <span class="nav-link-text ms-1 tncr s2">Cat&aacute;logos</span>
 							<i class="bi bi-chevron-down ms-auto"></i>
 					</a>
-						<div class="collapse multi-collapse" id="multiCollapseExample1">
+						<div class="collapse multi-collapse pt-3" id="multiCollapseExample1">
 							<ul id="list-group">
 								<li class="list-group-item">
 									<a class="nav-link fs-6" th:href="@{/etapas}" > 
