--- a/src/main/resources/templates/catalogos/etapas.html
+++ b/src/main/resources/templates/catalogos/etapas.html
@@ -16,43 +16,39 @@
 			<div class="row">
 				<div class="col-12">
 					<div class="card mb-4">
-						<div class="card-header pb-0">
+						<div class="card-header pb-0 text-primary">
 							<i class="fa-regular fa-rectangle-list card_header_icon"></i>
-							<h5 class="text-pr">C&aacute;talogo de Etapas</h5>
+							<h5 class="text-pr text-primary">C&aacute;talogo de Etapas</h5>
 						</div>
 						<div class="card-body px-0 pt-0 pb-2">
 							<div class="table-responsive p-0">
 								<table
-									class="table align-items-center justify-content-center mb-0 table-striped">
+									class="table align-items-center justify-content-center mb-0 table-striped table-hover">
 									<thead>
 										<tr>
-											<th class="text-uppercase text-dark fs-6 font-weight-bolder ">Proyecto</th>
-											<th
-												class="text-uppercase text-dark fs-6 font-weight-bolder  ps-2">Presupuesto</th>
-											<th
-												class="text-uppercase text-dark fs-6 font-weight-bolder  ps-2">Status</th>
-											<th
-												class="text-uppercase text-dark fs-6 font-weight-bolder text-center ps-2">Avance</th>
-											<th></th>
+											<th class="text-uppercase text-center text-dark fs-6 font-weight-bolder "></th>
+											<th class="text-uppercase text-center text-dark fs-6 font-weight-bolder  ps-2">Folio</th>
+											<th class="text-uppercase text-center text-dark fs-6 font-weight-bolder  ps-2">Validaci&oacute;n</th>
+											<th class="text-uppercase text-center text-dark fs-6 font-weight-bolder  ps-2">Gesti&oacute;n</th>
+											<th class="text-uppercase text-center text-dark fs-6 font-weight-bolder  ps-2">Acompa&Ntilde;a</th>
+											<th class="text-uppercase text-center text-dark fs-6 font-weight-bolder  ps-2">Vinculaci&oacute;n</th>
+											<th class="text-uppercase text-center text-dark fs-6 font-weight-bolder  ps-2">Suma</th>
+											<th class="text-uppercase text-center text-dark fs-6 font-weight-bolder text-center ps-2">Estado</th>
 										</tr>
 									</thead>
 									<tbody>
-										<tr>
-											<td>
-												<div class="d-flex px-2">
-													<div>
-														<i class="fa-regular fa-square-caret-right me-2 fs-4"></i>
-													</div>
-													<div class="my-auto">
-														<h6 class="mb-0 text-sg">Spotify</h6>
-													</div>
-												</div>
+										<tr data-toggle="collapse" data-target="#contNetflix" class="accordion-toggle collapsed" aria-expanded="true">
+											<td class="expand-button">
+												<span class="text-xg font-weight-bold ps-5">Netflix</span>
 											</td>
 											<td>
-												<p class="text-sg font-weight-bold mb-0">$2,500</p>
+												<p class="text-sg font-weight-bold mb-0"></p>
 											</td>
-											<td><span class="text-xg font-weight-bold">trabajando</span>
-											</td>
+											<td class="text-center"><span class="text-xg font-weight-bold">1</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold">0</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold">2</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold">4</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold">7 ventas</span></td>
 											<td class="align-middle text-center">
 												<div
 													class="d-flex align-items-center justify-content-center">
@@ -66,191 +62,44 @@
 													</div>
 												</div>
 											</td>
-											<td class="align-middle">
-												<button class="btn btn-link text-secondary mb-0">
-													<i class="fa-solid fa-chevron-right text-xg"></i>
-												</button>
+										</tr>
+									</tbody>
+									<tbody id="contNetflix" class="accordian-body collapse">
+										<tr>
+											<td>
+												<span class="text-xg font-weight-bold"></span>
 											</td>
+											<td class="text-center"><span class="text-xg font-weight-bold">00183456</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold">Completo</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold">Completo</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold">hexagono</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold">Espera</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold"></span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold"></span></td>
 										</tr>
 										<tr>
 											<td>
-												<div class="d-flex px-2">
-													<div>
-														<i class="fa-regular fa-square-caret-right me-2 fs-4"></i>
-													</div>
-													<div class="my-auto">
-														<h6 class="mb-0 text-sg">Invision</h6>
-													</div>
-												</div>
+												<span class="text-xg font-weight-bold"></span>
 											</td>
-											<td>
-												<p class="text-sg font-weight-bold mb-0">$5,000</p>
-											</td>
-											<td><span class="text-xg font-weight-bold">realizado</span>
-											</td>
-											<td class="align-middle text-center">
-												<div
-													class="d-flex align-items-center justify-content-center">
-													<span class="me-2 text-xg font-weight-bold">100%</span>
-													<div>
-														<div class="progress">
-															<div class="progress-bar bg-gradient-success"
-																role="progressbar" aria-valuenow="100" aria-valuemin="0"
-																aria-valuemax="100" style="width: 100%;"></div>
-														</div>
-													</div>
-												</div>
-											</td>
-											<td class="align-middle">
-												<button class="btn btn-link text-secondary mb-0"
-													aria-haspopup="true" aria-expanded="false">
-													<i class="fa-solid fa-chevron-right text-xg"></i>
-												</button>
-											</td>
+											<td class="text-center"><span class="text-xg font-weight-bold">00183456</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold">Completo</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold">Completo</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold">hexagono</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold">Espera</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold"></span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold"></span></td>
 										</tr>
 										<tr>
 											<td>
-												<div class="d-flex px-2">
-													<div>
-														<i class="fa-regular fa-square-caret-right me-2 fs-4"></i>
-													</div>
-													<div class="my-auto">
-														<h6 class="mb-0 text-sg">Jira</h6>
-													</div>
-												</div>
+												<span class="text-xg font-weight-bold"></span>
 											</td>
-											<td>
-												<p class="text-sg font-weight-bold mb-0">$3,400</p>
-											</td>
-											<td><span class="text-xg font-weight-bold">cancelado</span>
-											</td>
-											<td class="align-middle text-center">
-												<div
-													class="d-flex align-items-center justify-content-center">
-													<span class="me-2 text-xg font-weight-bold">30%</span>
-													<div>
-														<div class="progress">
-															<div class="progress-bar bg-gradient-danger"
-																role="progressbar" aria-valuenow="30" aria-valuemin="0"
-																aria-valuemax="30" style="width: 30%;"></div>
-														</div>
-													</div>
-												</div>
-											</td>
-											<td class="align-middle">
-												<button class="btn btn-link text-secondary mb-0"
-													aria-haspopup="true" aria-expanded="false">
-													<i class="fa-solid fa-chevron-right text-xg"></i>
-												</button>
-											</td>
-										</tr>
-										<tr>
-											<td>
-												<div class="d-flex px-2">
-													<div>
-														<i class="fa-regular fa-square-caret-right me-2 fs-4"></i>
-													</div>
-													<div class="my-auto">
-														<h6 class="mb-0 text-sg">Slack</h6>
-													</div>
-												</div>
-											</td>
-											<td>
-												<p class="text-sg font-weight-bold mb-0">$1,000</p>
-											</td>
-											<td><span class="text-xg font-weight-bold">cancelado</span>
-											</td>
-											<td class="align-middle text-center">
-												<div
-													class="d-flex align-items-center justify-content-center">
-													<span class="me-2 text-xg font-weight-bold">0%</span>
-													<div>
-														<div class="progress">
-															<div class="progress-bar bg-gradient-success"
-																role="progressbar" aria-valuenow="0" aria-valuemin="0"
-																aria-valuemax="0" style="width: 0%;"></div>
-														</div>
-													</div>
-												</div>
-											</td>
-											<td class="align-middle">
-												<button class="btn btn-link text-secondary mb-0"
-													aria-haspopup="true" aria-expanded="false">
-													<i class="fa-solid fa-chevron-right text-xg"></i>
-												</button>
-											</td>
-										</tr>
-										<tr>
-											<td>
-												<div class="d-flex px-2">
-													<div>
-														<i class="fa-regular fa-square-caret-right me-2 fs-4"></i>
-													</div>
-													<div class="my-auto">
-														<h6 class="mb-0 text-sg">Webdev</h6>
-													</div>
-												</div>
-											</td>
-											<td>
-												<p class="text-sg font-weight-bold mb-0">$14,000</p>
-											</td>
-											<td><span class="text-xg font-weight-bold">trabajando</span>
-											</td>
-											<td class="align-middle text-center">
-												<div
-													class="d-flex align-items-center justify-content-center">
-													<span class="me-2 text-xg font-weight-bold">80%</span>
-													<div>
-														<div class="progress">
-															<div class="progress-bar bg-gradient-info"
-																role="progressbar" aria-valuenow="80" aria-valuemin="0"
-																aria-valuemax="80" style="width: 80%;"></div>
-														</div>
-													</div>
-												</div>
-											</td>
-											<td class="align-middle">
-												<button class="btn btn-link text-secondary mb-0"
-													aria-haspopup="true" aria-expanded="false">
-													<i class="fa-solid fa-chevron-right text-xg"></i>
-												</button>
-											</td>
-										</tr>
-										<tr>
-											<td>
-												<div class="d-flex px-2">
-													<div>
-														<i class="fa-regular fa-square-caret-right me-2 fs-4"></i>
-													</div>
-													<div class="my-auto">
-														<h6 class="mb-0 text-sg">Adobe XD</h6>
-													</div>
-												</div>
-											</td>
-											<td>
-												<p class="text-sg font-weight-bold mb-0">$2,300</p>
-											</td>
-											<td><span class="text-xg font-weight-bold">realizado</span>
-											</td>
-											<td class="align-middle text-center">
-												<div
-													class="d-flex align-items-center justify-content-center">
-													<span class="me-2 text-xg font-weight-bold">100%</span>
-													<div>
-														<div class="progress">
-															<div class="progress-bar bg-gradient-success"
-																role="progressbar" aria-valuenow="100" aria-valuemin="0"
-																aria-valuemax="100" style="width: 100%;"></div>
-														</div>
-													</div>
-												</div>
-											</td>
-											<td class="align-middle">
-												<button class="btn btn-link text-secondary mb-0"
-													aria-haspopup="true" aria-expanded="false">
-													<i class="fa-solid fa-chevron-right text-xg"></i>
-												</button>
-											</td>
+											<td class="text-center"><span class="text-xg font-weight-bold">00183456</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold">Completo</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold">Completo</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold">hexagono</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold">Espera</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold"></span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold"></span></td>
 										</tr>
 									</tbody>
 								</table>
@@ -261,5 +110,6 @@
 			</div>
 		</div>
 	</main>
+	
 </body>
 </html>
