--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -185,6 +185,12 @@
 				</div>
 			</nav>
 			<!-- End Navbar -->
+			<style>
+			.collapsing {
+				-webkit-transition: height .01s ease !important;
+				transition: height .01s ease !important;
+			}
+			</style>
 			<!-- Script - JS -->
 			<script src="./resources/js/libs/jquery.min.js"></script>
 			<script src="./resources/js/libs/popper.js"></script>
