--- a/src/main/resources/templates/catalogos/etapas.html
+++ b/src/main/resources/templates/catalogos/etapas.html
@@ -37,69 +37,186 @@
 										</tr>
 									</thead>
 									<tbody>
-										<tr data-toggle="collapse" data-target="#contNetflix" class="accordion-toggle collapsed" aria-expanded="true">
+										<tr data-toggle="collapse" data-target=".contNetflix" class="accordion-toggle collapsed" aria-expanded="true">
 											<td class="expand-button">
-												<span class="text-xg font-weight-bold ps-5">Netflix</span>
+												<span class="text-xg font-weight-bold ps-5 text-dark">Netflix</span>
 											</td>
 											<td>
 												<p class="text-sg font-weight-bold mb-0"></p>
 											</td>
-											<td class="text-center"><span class="text-xg font-weight-bold">1</span></td>
-											<td class="text-center"><span class="text-xg font-weight-bold">0</span></td>
-											<td class="text-center"><span class="text-xg font-weight-bold">2</span></td>
-											<td class="text-center"><span class="text-xg font-weight-bold">4</span></td>
-											<td class="text-center"><span class="text-xg font-weight-bold">7 ventas</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-primary">1</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-primary">0</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-primary">2</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-primary">4</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-primary">7 ventas</span></td>
 											<td class="align-middle text-center">
-												<div
-													class="d-flex align-items-center justify-content-center">
-													<span class="me-2 text-xg font-weight-bold">60%</span>
-													<div>
-														<div class="progress">
-															<div class="progress-bar bg-gradient-info"
-																role="progressbar" aria-valuenow="60" aria-valuemin="0"
-																aria-valuemax="100" style="width: 60%;"></div>
-														</div>
-													</div>
-												</div>
+												<i class="fa-solid fa-bell text-danger fs-5"></i>
 											</td>
 										</tr>
-									</tbody>
-									<tbody id="contNetflix" class="accordian-body collapse">
-										<tr>
-											<td>
-												<span class="text-xg font-weight-bold"></span>
-											</td>
-											<td class="text-center"><span class="text-xg font-weight-bold">00183456</span></td>
-											<td class="text-center"><span class="text-xg font-weight-bold">Completo</span></td>
-											<td class="text-center"><span class="text-xg font-weight-bold">Completo</span></td>
-											<td class="text-center"><span class="text-xg font-weight-bold">hexagono</span></td>
-											<td class="text-center"><span class="text-xg font-weight-bold">Espera</span></td>
+										<tr class="collapse contNetflix">
+											<td><span class="text-xg font-weight-bold"></span></td>
+											<td><span class="text-xg font-weight-bold text-dark">00183456</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-success">Completo</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-success">Completo</span></td>
+											<td class="text-center"><i class="fa-solid fa-hexagon bg-danger"></i></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-secondary">Espera</span></td>
 											<td class="text-center"><span class="text-xg font-weight-bold"></span></td>
 											<td class="text-center"><span class="text-xg font-weight-bold"></span></td>
 										</tr>
-										<tr>
-											<td>
-												<span class="text-xg font-weight-bold"></span>
-											</td>
-											<td class="text-center"><span class="text-xg font-weight-bold">00183456</span></td>
-											<td class="text-center"><span class="text-xg font-weight-bold">Completo</span></td>
-											<td class="text-center"><span class="text-xg font-weight-bold">Completo</span></td>
-											<td class="text-center"><span class="text-xg font-weight-bold">hexagono</span></td>
-											<td class="text-center"><span class="text-xg font-weight-bold">Espera</span></td>
+										<tr class="collapse contNetflix">
+											<td><span class="text-xg font-weight-bold"></span></td>
+											<td><span class="text-xg font-weight-bold text-dark">00185680</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-success">Completo</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-success">Completo</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-success">Completo</span></td>
+											<td class="text-center"><i class="fa-solid fa-clock text-warning fs-5"></i></td>
 											<td class="text-center"><span class="text-xg font-weight-bold"></span></td>
 											<td class="text-center"><span class="text-xg font-weight-bold"></span></td>
 										</tr>
-										<tr>
-											<td>
-												<span class="text-xg font-weight-bold"></span>
+										<tr class="collapse contNetflix">
+											<td><span class="text-xg font-weight-bold"></span></td>
+											<td><span class="text-xg font-weight-bold text-dark">0187901</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-success">Completo</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-success">Completo</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-success">Completo</span></td>
+											<td class="text-center"><i class="fa-solid fa-clock text-warning fs-5"></i></td>
+											<td class="text-center"><span class="text-xg font-weight-bold"></span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold"></span></td>
+										</tr>
+										<tr class="collapse contNetflix">
+											<td><span class="text-xg font-weight-bold"></span></td>
+											<td><span class="text-xg font-weight-bold text-dark">00191256</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-success">Completo</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-success">Completo</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-success">Completo</span></td>
+											<td class="text-center"><i class="fa-solid fa-right-long text-success fs-4"></i></td>
+											<td class="text-center"><span class="text-xg font-weight-bold"></span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold"></span></td>
+										</tr>
+										<tr class="collapse contNetflix">
+											<td><span class="text-xg font-weight-bold"></span></td>
+											<td><span class="text-xg font-weight-bold text-dark">00194556</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-success">Completo</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-success">Completo</span></td>
+											<td class="text-center"><i class="fa-solid fa-clock text-warning fs-5"></i></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-secondary">Espera</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold"></span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold"></span></td>
+										</tr>
+										<tr class="collapse contNetflix">
+											<td><span class="text-xg font-weight-bold"></span></td>
+											<td><span class="text-xg font-weight-bold text-dark">00196661</span></td>
+											<td class="text-center"><i class="fa-solid fa-hexagon bg-danger fs-4"></i></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-secondary">Espera</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-secondary">Espera</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-secondary">Espera</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold"></span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold"></span></td>
+										</tr>
+										<tr class="collapse contNetflix">
+											<td><span class="text-xg font-weight-bold"></span></td>
+											<td><span class="text-xg font-weight-bold text-dark">00200011</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-success">Completo</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-success">Completo</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-success">Completo</span></td>
+											<td class="text-center"><i class="fa-solid fa-right-long text-success fs-4"></i></td>
+											<td class="text-center"><span class="text-xg font-weight-bold"></span></td>
+										</tr>
+										<tr data-toggle="collapse" data-target=".contDisney" class="accordion-toggle collapsed" aria-expanded="true">
+											<td class="expand-button">
+												<span class="text-xg font-weight-bold ps-5 text-dark">Disney +</span>
 											</td>
-											<td class="text-center"><span class="text-xg font-weight-bold">00183456</span></td>
-											<td class="text-center"><span class="text-xg font-weight-bold">Completo</span></td>
-											<td class="text-center"><span class="text-xg font-weight-bold">Completo</span></td>
-											<td class="text-center"><span class="text-xg font-weight-bold">hexagono</span></td>
-											<td class="text-center"><span class="text-xg font-weight-bold">Espera</span></td>
-											<td class="text-center"><span class="text-xg font-weight-bold"></span></td>
-											<td class="text-center"><span class="text-xg font-weight-bold"></span></td>
+											<td>
+												<p class="text-sg font-weight-bold mb-0"></p>
+											</td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-primary">0</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-primary">0</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-primary">8</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-primary">1</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-primary">9 ventas</span></td>
+											<td class="align-middle text-center">
+												<i class="fa-solid fa-bell text-warning fs-5"></i>
+											</td>
+										</tr>
+										<tr data-toggle="collapse" data-target=".contStar" class="accordion-toggle collapsed" aria-expanded="true">
+											<td class="expand-button">
+												<span class="text-xg font-weight-bold ps-5 text-dark">Star +</span>
+											</td>
+											<td>
+												<p class="text-sg font-weight-bold mb-0"></p>
+											</td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-primary">2</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-primary">1</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-primary">0</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-primary">0</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-primary">3 ventas</span></td>
+											<td class="align-middle text-center">
+												<i class="fa-solid fa-bell text-warning fs-5"></i>
+											</td>
+										</tr>
+										<tr data-toggle="collapse" data-target=".contStar" class="accordion-toggle collapsed" aria-expanded="true">
+											<td class="expand-button">
+												<span class="text-xg font-weight-bold ps-5 text-dark">HBO +</span>
+											</td>
+											<td>
+												<p class="text-sg font-weight-bold mb-0"></p>
+											</td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-primary">32</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-primary">0</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-primary">0</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-primary">0</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-primary">32 ventas</span></td>
+											<td class="align-middle text-center">
+												<i class="fa-solid fa-bell text-success fs-5"></i>
+											</td>
+										</tr>
+										<tr data-toggle="collapse" data-target=".contStar" class="accordion-toggle collapsed" aria-expanded="true">
+											<td class="expand-button">
+												<span class="text-xg font-weight-bold ps-5 text-dark">Prime</span>
+											</td>
+											<td>
+												<p class="text-sg font-weight-bold mb-0"></p>
+											</td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-primary">1</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-primary">23</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-primary">0</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-primary">0</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-primary">24 ventas</span></td>
+											<td class="align-middle text-center">
+												<i class="fa-solid fa-bell text-danger fs-5"></i>
+											</td>
+										</tr>
+										<tr data-toggle="collapse" data-target=".contStar" class="accordion-toggle collapsed" aria-expanded="true">
+											<td class="expand-button">
+												<span class="text-xg font-weight-bold ps-5 text-dark">Star tv</span>
+											</td>
+											<td>
+												<p class="text-sg font-weight-bold mb-0"></p>
+											</td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-primary">1</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-primary">0</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-primary">0</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-primary">1</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-primary">2 ventas</span></td>
+											<td class="align-middle text-center">
+												<i class="fa-solid fa-bell text-success fs-5"></i>
+											</td>
+										</tr>
+										<tr data-toggle="collapse" data-target=".contStar" class="accordion-toggle collapsed" aria-expanded="true">
+											<td class="expand-button">
+												<span class="text-xg font-weight-bold ps-5 text-dark">F1</span>
+											</td>
+											<td>
+												<p class="text-sg font-weight-bold mb-0"></p>
+											</td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-primary">28</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-primary">0</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-primary">0</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-primary">0</span></td>
+											<td class="text-center"><span class="text-xg font-weight-bold text-primary">28 ventas</span></td>
+											<td class="align-middle text-center">
+												<i class="fa-solid fa-bell text-success fs-5"></i>
+											</td>
 										</tr>
 									</tbody>
 								</table>
@@ -110,6 +227,5 @@
 			</div>
 		</div>
 	</main>
-	
 </body>
 </html>
