--- a/src/main/resources/templates/catalogos/etapas.html
+++ b/src/main/resources/templates/catalogos/etapas.html
@@ -14,7 +14,7 @@
 	<main class="main-container-wk">
 		<div class="container-fluid padding-none">
 			<div class="row">
-				<div class="col-12">
+				<div class="col-9">
 					<div class="card mb-4">
 						<div class="card-header pb-0 text-primary">
 							<i class="fa-regular fa-rectangle-list card_header_icon"></i>
@@ -23,7 +23,7 @@
 						<div class="card-body px-0 pt-0 pb-2">
 							<div class="table-responsive p-0">
 								<table
-									class="table align-items-center justify-content-center mb-0 table-striped table-hover">
+									class="table align-items-center justify-content-center mb-0 table-hover table-striped table-bordered">
 									<thead>
 										<tr>
 											<th class="text-uppercase text-center text-dark fs-6 font-weight-bolder "></th>
@@ -217,6 +217,86 @@
 											<td class="align-middle text-center">
 												<i class="fa-solid fa-bell text-success fs-5"></i>
 											</td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-3">
+					<div class="card mb-4">
+						<div class="card-header pb-0 text-primary">
+							<i class="fa-regular fa-rectangle-list card_header_icon"></i>
+							<h5 class="text-pr text-primary">Verificaci&oacute;n Entradas</h5>
+						</div>
+						<div class="card-body px-0 pt-0 pb-2">
+							<div class="table-responsive p-0">
+								<h5 class="card-title p-2 bg-info text-light text-center"><strong>NETFLIX / 00196661 / Validaci&oacute;n</strong></h5>
+								<table
+									class="table align-items-center justify-content-center mb-0 table-striped table-hover table-sm table-bordered">
+									<thead>
+										<tr>
+											<th class="text-uppercase text-center text-dark fs-6 font-weight-bolder text-center">Validar</th>
+											<th class="text-uppercase text-center text-dark fs-6 font-weight-bolder text-center">Estado</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td><p class="text-sg font-weight-bold mb-0">Librer&iacute;a</p></td>
+											<td class="text-center"><i class="fa-solid fa-circle-check text-success fs-4"></i></td>
+										</tr>
+										<tr>
+											<td><p class="text-sg font-weight-bold mb-0">Equipo</p></td>
+											<td class="text-center"><i class="fa-solid fa-circle-check text-success fs-4"></i></td>
+										</tr>
+										<tr>
+											<td><p class="text-sg font-weight-bold mb-0">Telefono</p></td>
+											<td class="text-center"><i class="fa-solid fa-circle-check text-success fs-4"></i></td>
+										</tr>
+										<tr>
+											<td><p class="text-sg font-weight-bold mb-0">Canal</p></td>
+											<td class="text-center"><i class="fa-solid fa-circle-check text-success fs-4"></i></td>
+										</tr>
+										<tr>
+											<td><p class="text-sg font-weight-bold mb-0">Oficina</p></td>
+											<td class="text-center"><i class="fa-solid fa-circle-check text-success fs-4"></i></td>
+										</tr>
+										<tr>
+											<td><p class="text-sg font-weight-bold mb-0">Usuario</p></td>
+											<td class="text-center"><i class="fa-solid fa-circle-check text-success fs-4"></i></td>
+										</tr>
+										<tr>
+											<td><p class="text-sg font-weight-bold mb-0">Correo</p></td>
+											<td class="text-center"><i class="fa-solid fa-circle-check text-success fs-4"></i></td>
+										</tr>
+										<tr>
+											<td><p class="text-sg font-weight-bold mb-0">Celular</p></td>
+											<td class="text-center"><i class="fa-solid fa-circle-check text-success fs-4"></i></td>
+										</tr>
+										<tr>
+											<td><p class="text-sg font-weight-bold mb-0">Paquete</p></td>
+											<td class="text-center"><i class="fa-solid fa-circle-check text-success fs-4"></i></td>
+										</tr>
+										<tr>
+											<td><p class="text-sg font-weight-bold mb-0">Producto</p></td>
+											<td class="text-center"><i class="fa-solid fa-circle-check text-success fs-4"></i></td>
+										</tr>
+										<tr>
+											<td><p class="text-sg font-weight-bold mb-0">Movimiento</p></td>
+											<td class="text-center"><i class="fa-solid fa-circle-check text-success fs-4"></i></td>
+										</tr>
+										<tr>
+											<td><p class="text-sg font-weight-bold mb-0">OS</p></td>
+											<td class="text-center"><i class="fa-solid fa-circle-check text-success fs-4"></i></td>
+										</tr>
+										<tr>
+											<td><p class="text-sg font-weight-bold mb-0">SKU</p></td>
+											<td class="text-center"><i class="fa-solid fa-circle-check text-success fs-4"></i></td>
+										</tr>
+										<tr>
+											<td><p class="text-sg font-weight-bold mb-0">Transaccion</p></td>
+											<td class="text-center"><i class="fa-solid fa-circle-check text-success fs-4"></i></td>
 										</tr>
 									</tbody>
 								</table>
