--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -50,8 +50,8 @@
 	</div>
 
 	<!-- Script - JS -->
-	<script type="text/javascript"
-		src="./resources/js/bootstrap-5.1.3/bootstrap.min.js"></script>
+	<script type="text/javascript" src="./resources/js/libs/jquery.min.js"></script>
+	<script type="text/javascript" src="./resources/js/bootstrap-5.1.3/bootstrap.min.js"></script>
 	<script type="text/javascript" src="./resources/js/index.js"></script>
 </body>
 </html>
