--- a/src/main/resources/templates/catalogos/etapas.html
+++ b/src/main/resources/templates/catalogos/etapas.html
@@ -268,11 +268,11 @@
 										</tr>
 										<tr>
 											<td><p class="text-sg font-weight-bold mb-0">Correo</p></td>
-											<td class="text-center"><i class="fa-solid fa-circle-check text-success fs-4"></i></td>
+											<td class="text-center"><i class="fa-solid fa-hand text-danger fs-4"></i></td>
 										</tr>
 										<tr>
 											<td><p class="text-sg font-weight-bold mb-0">Celular</p></td>
-											<td class="text-center"><i class="fa-solid fa-circle-check text-success fs-4"></i></td>
+											<td class="text-center"><i class="fa-solid fa-hand text-danger fs-4"></i></td>
 										</tr>
 										<tr>
 											<td><p class="text-sg font-weight-bold mb-0">Paquete</p></td>
