Se agrego ejemplo de graficas de lineas.

--- a/src/main/resources/static/resources/css/index.css
+++ b/src/main/resources/static/resources/css/index.css
@@ -360,12 +360,12 @@ a:hover{
 
 /* .................................................................................................................. INDEX FIN */
 
-/* .................................................................................................................. SALUD SISTEMA INI */
-#chartdiv {
+/* .................................................................................................................. CHARTS INI */
+#chartdiv,#controlChartdiv {
 	width: 100%;
-	height: 500px;
+	height: 300px;
 }
-/* .................................................................................................................. SALUD SISTEMA FIN */
+/* ..................................................................................................................CHARTS FIN */
 
 /* .................................................................................................................. TABLE INI */
 .accordian-body,.show {
