--- a/src/main/resources/templates/dashboard/comparativo_ventas_streaming.html
+++ b/src/main/resources/templates/dashboard/comparativo_ventas_streaming.html
@@ -4,103 +4,189 @@
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head th:replace="index :: head"></head>
-	<meta charset="ISO-8859-1">
-	<title></title>
+<meta charset="ISO-8859-1">
+<title></title>
+
 </head>
 <body>
+	<!-- Resources -->
+	<script src="./resources/js/amcharts_5.2.23/index.js"></script>
+	<script src="./resources/js/amcharts_5.2.23/xy.js"></script>
+	<script src="./resources/js/amcharts_5.2.23/themes/Animated.js"></script>
+	
 	<div th:replace="index :: menu"></div>
 	<div th:replace="index :: container"></div>
 	<main class="main-container-wk">
 		<div class="container-fluid padding-none">
 			<div class="row">
 				<div class="col-12">
-					<div class="row">
-						<div class="col-12">
-							<div class="card mb-4">
-								<div class="card-header pb-0">
-									<i class="fa-regular fa-rectangle-list card_header_icon"></i>
-									<h5 class="text-pr">Compatrativos de ventas en servicios
-										de Streaming</h5>
+					<div class="card mb-4">
+						<div class="card-header pb-0 text-primary">
+							<i class="fa-regular fa-rectangle-list card_header_icon"></i>
+							<h5 class="text-pr text-primary">Compatrativos de ventas en servicios de
+								Streaming</h5>
+						</div>
+						<div class="card-body px-0 pt-0 pb-2">
+							
+
+							<!-- Chart code -->
+							<script src="./resources/js/charts/charts.js"></script>
+
+							<!-- HTML -->
+							<div class="row">
+								<div class="col-8">
+									<div id="chartdiv"></div>
 								</div>
-								<div class="card-body px-0 pt-0 pb-2">
-									<!-- Resources -->
-									<script src="./resources/js/amcharts_5.2.23/index.js"></script>
-									<script src="./resources/js/amcharts_5.2.23/xy.js"></script>
-									<script src="./resources/js/amcharts_5.2.23/themes/Animated.js"></script>
-
-									<!-- Chart code -->
-									<script src="./resources/js/charts.js"></script>
-
-									<!-- HTML -->
-									<div class="row">
-										<div class="col-8">
-											<div id="chartdiv"></div>
-										</div>
-										<div class="col-4 justify-content-center text-center px-5">
-											<br />
-											<h3 class="h5">Selecciona fechas para comparar</h3>
-											<div class="input-group">
-												<div class="w-100">
-													<div class="form-group">
-														<div class="input-group date" id="id_0">
-															<span class="input-group-text">De</span> <input
-																type="text" value="" class="form-control px-3"
-																placeholder="MM/DD/YYYY hh:mm:ss" required />
-														</div>
-														<hr />
-														<div class="input-group date" id="id_1">
-															<span class="input-group-text">Hasta</span> <input
-																type="text" value="" class="form-control px-3"
-																placeholder="MM/DD/YYYY hh:mm:ss" required />
-														</div>
-													</div>
+								<div class="col-4 justify-content-center text-center px-5">
+									<br />
+									<h3 class="h5">Selecciona fechas para comparar</h3>
+									<div class="input-group">
+										<div class="w-100">
+											<div class="form-group">
+												<div class="input-group date" id="id_0">
+													<span class="input-group-text">De</span> <input type="text"
+														value="" class="form-control px-3"
+														placeholder="MM/DD/YYYY hh:mm:ss" required />
+												</div>
+												<hr />
+												<div class="input-group date" id="id_1">
+													<span class="input-group-text">Hasta</span> <input
+														type="text" value="" class="form-control px-3"
+														placeholder="MM/DD/YYYY hh:mm:ss" required />
 												</div>
 											</div>
-											<button type="button" class="btn btn-dark">APLICAR</button>
 										</div>
-										<SCRIPT>
-											(function($) {
-												"use strict";
-
-												$('#id_0,#id_1')
-														.datetimepicker(
-																{
-																	allowInputToggle : true,
-																	showClose : true,
-																	showClear : true,
-																	showTodayButton : true,
-																	format : "MM/DD/YYYY hh:mm:ss A",
-																	icons : {
-																		time : 'fa fa-clock-o',
-
-																		date : 'fa fa-calendar-o',
-
-																		up : 'fa fa-chevron-up',
-
-																		down : 'fa fa-chevron-down',
-
-																		previous : 'fa fa-chevron-left',
-
-																		next : 'fa fa-chevron-right',
-
-																		today : 'fa fa-chevron-up',
-
-																		clear : 'fa fa-trash',
-
-																		close : 'fa fa-close'
-																	},
-
-																});
-
-											})(jQuery);
-										</script>
 									</div>
+									<nav class="navbar  bg-info">
+										<div class="container-fluid justify-content-center">
+											<a class="navbar-brand text-white fs-5" href="#">del 01 de Enero al 31 de Diciembre 2022</a>
+										</div>
+									</nav>
+									<button type="button" class="btn btn-dark mt-3">APLICAR</button>
 								</div>
+								<SCRIPT>
+									(function($) {
+										"use strict";
+
+										$('#id_0,#id_1')
+												.datetimepicker(
+														{
+															allowInputToggle : true,
+															showClose : true,
+															showClear : true,
+															showTodayButton : true,
+															format : "MM/DD/YYYY hh:mm:ss A",
+															icons : {
+																time : 'fa fa-clock-o',
+
+																date : 'fa fa-calendar-o',
+
+																up : 'fa fa-chevron-up',
+
+																down : 'fa fa-chevron-down',
+
+																previous : 'fa fa-chevron-left',
+
+																next : 'fa fa-chevron-right',
+
+																today : 'fa fa-chevron-up',
+
+																clear : 'fa fa-trash',
+
+																close : 'fa fa-close'
+															},
+
+														});
+
+									})(jQuery);
+								</script>
 							</div>
 						</div>
 					</div>
+				</div>
+				<div class="col-12">
+					<div class="card mb-4">
+						<div class="card-header pb-0 text-primary">
+							<i class="fa-regular fa-rectangle-list card_header_icon"></i>
+							<h5 class="text-pr text-primary">Comportamiento en las ventas por Streaming</h5>
+						</div>
+						<div class="card-body px-0 pt-0 pb-2">
+							
+							
+							<!-- Chart code -->
+							<script src="./resources/js/charts/controlChart.js"></script>
 
-				
+							<!-- HTML -->
+							<div class="row">
+								<div class="col-8">
+									<div id="controlChartdiv"></div>
+								</div>
+								<div class="col-4 justify-content-center text-center px-5">
+									<br />
+									<h3 class="h5">Selecciona fechas para comparar</h3>
+									<div class="input-group">
+										<div class="w-100">
+											<div class="form-group">
+												<div class="input-group date" id="id_0">
+													<span class="input-group-text">De</span> <input type="text"
+														value="" class="form-control px-3"
+														placeholder="MM/DD/YYYY hh:mm:ss" required />
+												</div>
+												<hr />
+												<div class="input-group date" id="id_1">
+													<span class="input-group-text">Hasta</span> <input
+														type="text" value="" class="form-control px-3"
+														placeholder="MM/DD/YYYY hh:mm:ss" required />
+												</div>
+											</div>
+										</div>
+									</div>
+									<nav class="navbar  bg-info">
+										<div class="container-fluid justify-content-center">
+											<a class="navbar-brand text-white fs-5" href="#">del 01 de Enero al 31 de Diciembre 2022</a>
+										</div>
+									</nav>
+									<button type="button" class="btn btn-dark mt-3">APLICAR</button>
+								</div>
+								<SCRIPT>
+									(function($) {
+										"use strict";
+
+										$('#id_0,#id_1')
+												.datetimepicker(
+														{
+															allowInputToggle : true,
+															showClose : true,
+															showClear : true,
+															showTodayButton : true,
+															format : "MM/DD/YYYY hh:mm:ss A",
+															icons : {
+																time : 'fa fa-clock-o',
+
+																date : 'fa fa-calendar-o',
+
+																up : 'fa fa-chevron-up',
+
+																down : 'fa fa-chevron-down',
+
+																previous : 'fa fa-chevron-left',
+
+																next : 'fa fa-chevron-right',
+
+																today : 'fa fa-chevron-up',
+
+																clear : 'fa fa-trash',
+
+																close : 'fa fa-close'
+															},
+
+														});
+
+									})(jQuery);
+								</script>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
