--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -45,6 +45,13 @@
 				<a href="#">Olvid&oacute; su contraseña?</a> <input type="submit"
 					class="btnLogin" value="Iniciar Sesión"> <br /> <br />
 				<div class="logo_tmx_sidevar" style="width: auto;"></div>
+				<table th:if="${usuarios.size()>0}">
+				<tbody>
+					<tr th:each="usuario: ${usuarios}">
+						<td th:text="${usuario.cvUsuario}"></td>
+					</tr>
+				</tbody>
+				</table>
 			</form>
 		</div>
 	</div>
