--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -40,7 +40,7 @@
 					<li class="nav-item"><a class="nav-link" th:href="@{/comparativo_ventas_streaming}" id="salud_sistema">
 							<div
 								class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-								<i class="ni fa-solid fa-desktop fs-4"></i>
+								<i class="ni fa-solid fa-desktop text-secondary fs-4"></i>
 							</div> <span class="nav-link-text ms-1 tncr s2">Salud del sistema</span>
 					</a></li>
 					<li class="nav-item"><a class="nav-link" th:href="@{/comparativo_ventas_streaming}" id="contrataciones">
