--- a/src/main/resources/static/resources/css/argon-dashboard.css
+++ b/src/main/resources/static/resources/css/argon-dashboard.css
@@ -22546,7 +22546,7 @@ hr.horizontal.gray-light {
 .navbar-vertical.navbar-expand-xs .navbar-collapse {
   display: block;
   overflow: auto;
-  height: calc(100vh - 360px);
+  height: calc(100vh - 9.5rem);
 }
 
 .navbar-vertical.navbar-expand-xs>[class*="container"] {
@@ -23294,7 +23294,7 @@ hr.horizontal.gray-light {
 }
 
 .sidenav-header {
-  height: 4.875rem;
+  height: 5.8rem;
 }
 
 .sidenav-footer .card.card-background:after {
