--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,7 +31,7 @@
 					aria-hidden="true" id="iconSidenav"></i> <a
 					class="navbar-brand m-0" href="#" target="_blank"
 					style="display: flex;"><div class="logo_tmx_sidevar"></div> </a>
-					<i class="fa-solid fa-circle-xmark icon-nav-menu-close"></i>
+					<i class="fa-solid fa-circle-xmark icon-nav-menu-close" style="display: none;"></i>
 			</div>
 			<hr class="horizontal dark mt-0">
 			<div class="collapse navbar-collapse  w-auto "
