--- a/src/main/resources/templates/catalogos/plataformas.html
+++ b/src/main/resources/templates/catalogos/plataformas.html
@@ -17,8 +17,8 @@
 				<div class="col-12">
 					<div class="card mb-4">
 						<div class="card-header pb-0">
-							<i class="fa-regular fa-rectangle-list card_header_icon"></i>
-							<h5 class="text-pr">C&aacute;talogo de Plataformas</h5>
+							<i class="fa-regular fa-rectangle-list card_header_icon text-primary"></i>
+							<h5 class="text-pr text-primary">C&aacute;talogo de Plataformas</h5>
 						</div>
 						<div class="card-body px-0 pt-0 pb-2">
 							<div class="table-responsive p-0">
