--- a/src/main/resources/templates/dashboard/comparativo_ventas_streaming.html
+++ b/src/main/resources/templates/dashboard/comparativo_ventas_streaming.html
@@ -59,7 +59,7 @@
 									</div>
 									<nav class="navbar  bg-info">
 										<div class="container-fluid justify-content-center">
-											<a class="navbar-brand text-white fs-5" href="#">del 01 de Enero al 31 de Diciembre 2022</a>
+											<a class="navbar-brand text-white fs-5 text-date-chart" href="#">del 01 de Enero al 31 de Diciembre 2022</a>
 										</div>
 									</nav>
 									<button type="button" class="btn btn-dark mt-3">APLICAR</button>
@@ -143,7 +143,7 @@
 									</div>
 									<nav class="navbar  bg-info">
 										<div class="container-fluid justify-content-center">
-											<a class="navbar-brand text-white fs-5" href="#">del 01 de Enero al 31 de Diciembre 2022</a>
+											<a class="navbar-brand text-white fs-5 text-date-chart" href="#">del 01 de Enero al 31 de Diciembre 2022</a>
 										</div>
 									</nav>
 									<button type="button" class="btn btn-dark mt-3">APLICAR</button>
