--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -194,7 +194,7 @@
 			<!-- Script - JS -->
 			<script src="./resources/js/libs/jquery.min.js"></script>
 			<script src="./resources/js/libs/popper.js"></script>
-			<script src="./resources/js/libs/popper.min.js"></script>
+<!-- 			<script src="./resources/js/libs/popper.min.js"></script> -->
 			<script src="./resources/js/bootstrap-5.1.3/bootstrap.min.js"></script>
 			<script src="./resources/js/libs/perfect-scrollbar.min.js"></script>
 			<script src="./resources/js/libs/smooth-scrollbar.min.js"></script>
