--- a/src/main/resources/static/resources/css/argon-dashboard.css
+++ b/src/main/resources/static/resources/css/argon-dashboard.css
@@ -3661,19 +3661,19 @@ fieldset:disabled .btn {
 
 .btn-primary {
   --bs-btn-color: #000;
-  --bs-btn-bg: #5e72e4;
-  --bs-btn-border-color: #5e72e4;
+  --bs-btn-bg: #219ae2;
+  --bs-btn-border-color: #219ae2;
   --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #7687e8;
-  --bs-btn-hover-border-color: #6e80e7;
+  --bs-btn-hover-bg: #219ae2;
+  --bs-btn-hover-border-color: #219ae2;
   --bs-btn-focus-shadow-rgb: 80, 97, 194;
   --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #7e8ee9;
-  --bs-btn-active-border-color: #6e80e7;
+  --bs-btn-active-bg: #219ae2;
+  --bs-btn-active-border-color: #219ae2;
   --bs-btn-active-shadow: none;
   --bs-btn-disabled-color: #000;
-  --bs-btn-disabled-bg: #5e72e4;
-  --bs-btn-disabled-border-color: #5e72e4;
+  --bs-btn-disabled-bg: #219ae2;
+  --bs-btn-disabled-border-color: #219ae2;
 }
 
 .btn-secondary {
@@ -3681,12 +3681,12 @@ fieldset:disabled .btn {
   --bs-btn-bg: #8392ab;
   --bs-btn-border-color: #8392ab;
   --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #96a2b8;
-  --bs-btn-hover-border-color: #8f9db3;
+  --bs-btn-hover-bg: #8392ab;
+  --bs-btn-hover-border-color: #8392ab;
   --bs-btn-focus-shadow-rgb: 111, 124, 145;
   --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #9ca8bc;
-  --bs-btn-active-border-color: #8f9db3;
+  --bs-btn-active-bg: #8392ab;
+  --bs-btn-active-border-color: #8392ab;
   --bs-btn-active-shadow: none;
   --bs-btn-disabled-color: #000;
   --bs-btn-disabled-bg: #8392ab;
@@ -3695,104 +3695,104 @@ fieldset:disabled .btn {
 
 .btn-success {
   --bs-btn-color: #000;
-  --bs-btn-bg: #2dce89;
-  --bs-btn-border-color: #2dce89;
+  --bs-btn-bg: #46ab09;
+  --bs-btn-border-color: #46ab09;
   --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #4dd59b;
-  --bs-btn-hover-border-color: #42d395;
+  --bs-btn-hover-bg: #46ab09;
+  --bs-btn-hover-border-color: #46ab09;
   --bs-btn-focus-shadow-rgb: 38, 175, 116;
   --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #57d8a1;
-  --bs-btn-active-border-color: #42d395;
+  --bs-btn-active-bg: #46ab09;
+  --bs-btn-active-border-color: #46ab09;
   --bs-btn-active-shadow: none;
   --bs-btn-disabled-color: #000;
-  --bs-btn-disabled-bg: #2dce89;
-  --bs-btn-disabled-border-color: #2dce89;
+  --bs-btn-disabled-bg: #46ab09;
+  --bs-btn-disabled-border-color: #46ab09;
 }
 
 .btn-info {
   --bs-btn-color: #000;
-  --bs-btn-bg: #11cdef;
-  --bs-btn-border-color: #11cdef;
+  --bs-btn-bg: #0077b5;
+  --bs-btn-border-color: #0077b5;
   --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #35d5f1;
-  --bs-btn-hover-border-color: #29d2f1;
+  --bs-btn-hover-bg: #0077b5;
+  --bs-btn-hover-border-color: #0077b5;
   --bs-btn-focus-shadow-rgb: 14, 174, 203;
   --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #41d7f2;
-  --bs-btn-active-border-color: #29d2f1;
+  --bs-btn-active-bg: #0077b5;
+  --bs-btn-active-border-color: #0077b5;
   --bs-btn-active-shadow: none;
   --bs-btn-disabled-color: #000;
-  --bs-btn-disabled-bg: #11cdef;
-  --bs-btn-disabled-border-color: #11cdef;
+  --bs-btn-disabled-bg: #0077b5;
+  --bs-btn-disabled-border-color: #0077b5;
 }
 
 .btn-warning {
   --bs-btn-color: #000;
-  --bs-btn-bg: #fb6340;
-  --bs-btn-border-color: #fb6340;
+  --bs-btn-bg: #db9f0f;
+  --bs-btn-border-color: #db9f0f;
   --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #fc7a5d;
-  --bs-btn-hover-border-color: #fb7353;
+  --bs-btn-hover-bg: #db9f0f;
+  --bs-btn-hover-border-color: #db9f0f;
   --bs-btn-focus-shadow-rgb: 213, 84, 54;
   --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #fc8266;
-  --bs-btn-active-border-color: #fb7353;
+  --bs-btn-active-bg: #db9f0f;
+  --bs-btn-active-border-color: #db9f0f;
   --bs-btn-active-shadow: none;
   --bs-btn-disabled-color: #000;
-  --bs-btn-disabled-bg: #fb6340;
-  --bs-btn-disabled-border-color: #fb6340;
+  --bs-btn-disabled-bg: #db9f0f;
+  --bs-btn-disabled-border-color: #db9f0f;
 }
 
 .btn-danger {
   --bs-btn-color: #000;
-  --bs-btn-bg: #f5365c;
-  --bs-btn-border-color: #f5365c;
+  --bs-btn-bg: #be1212;
+  --bs-btn-border-color: #be1212;
   --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #f75474;
-  --bs-btn-hover-border-color: #f64a6c;
+  --bs-btn-hover-bg: #be1212;
+  --bs-btn-hover-border-color: #be1212;
   --bs-btn-focus-shadow-rgb: 208, 46, 78;
   --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #f75e7d;
-  --bs-btn-active-border-color: #f64a6c;
+  --bs-btn-active-bg: #be1212;
+  --bs-btn-active-border-color: #be1212;
   --bs-btn-active-shadow: none;
   --bs-btn-disabled-color: #000;
-  --bs-btn-disabled-bg: #f5365c;
-  --bs-btn-disabled-border-color: #f5365c;
+  --bs-btn-disabled-bg: #be1212;
+  --bs-btn-disabled-border-color: #be1212;
 }
 
 .btn-light {
   --bs-btn-color: #000;
-  --bs-btn-bg: #e9ecef;
-  --bs-btn-border-color: #e9ecef;
+  --bs-btn-bg: #f0f3f5;
+  --bs-btn-border-color: #f0f3f5;
   --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #eceff1;
-  --bs-btn-hover-border-color: #ebeef1;
+  --bs-btn-hover-bg: #f0f3f5;
+  --bs-btn-hover-border-color: #f0f3f5;
   --bs-btn-focus-shadow-rgb: 198, 201, 203;
   --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #edf0f2;
-  --bs-btn-active-border-color: #ebeef1;
+  --bs-btn-active-bg: #f0f3f5;
+  --bs-btn-active-border-color: #f0f3f5;
   --bs-btn-active-shadow: none;
   --bs-btn-disabled-color: #000;
-  --bs-btn-disabled-bg: #e9ecef;
-  --bs-btn-disabled-border-color: #e9ecef;
+  --bs-btn-disabled-bg: #f0f3f5;
+  --bs-btn-disabled-border-color: #f0f3f5;
 }
 
 .btn-dark {
   --bs-btn-color: #fff;
-  --bs-btn-bg: #344767;
-  --bs-btn-border-color: #344767;
+  --bs-btn-bg: #333333;
+  --bs-btn-border-color: #333333;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #2c3c58;
-  --bs-btn-hover-border-color: #2a3952;
+  --bs-btn-hover-bg: #333333;
+  --bs-btn-hover-border-color: #333333;
   --bs-btn-focus-shadow-rgb: 82, 99, 126;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #2a3952;
-  --bs-btn-active-border-color: #27354d;
+  --bs-btn-active-bg: #333333;
+  --bs-btn-active-border-color: #333333;
   --bs-btn-active-shadow: none;
   --bs-btn-disabled-color: #fff;
-  --bs-btn-disabled-bg: #344767;
-  --bs-btn-disabled-border-color: #344767;
+  --bs-btn-disabled-bg: #333333;
+  --bs-btn-disabled-border-color: #333333;
 }
 
 .btn-white {
@@ -6275,7 +6275,7 @@ fieldset:disabled .btn {
   height: 1em;
   padding: 0.25em 0.25em;
   color: #fff;
-  background: transparent url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 16 16'%3e%3cpath d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/%3e%3c/svg%3e") center/1em auto no-repeat;
+/*   background: black url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 16 16'%3e%3cpath d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/%3e%3c/svg%3e") center/1em auto no-repeat; */
   border: 0;
   border-radius: 0.375rem;
   opacity: 0.5;
@@ -20503,8 +20503,8 @@ fieldset:disabled .btn {
 
 .btn-info:hover,
 .btn.bg-gradient-info:hover {
-  background-color: #11cdef;
-  border-color: #11cdef;
+  background-color: rgb(0 119 181 / 88%);
+  border-color: #0077b5;
 }
 
 .btn-info .btn.bg-outline-info,
@@ -20519,7 +20519,7 @@ fieldset:disabled .btn {
 .btn.bg-gradient-info:not(:disabled):not(.disabled):active,
 .show>.btn.bg-gradient-info.dropdown-toggle {
   color: color-yiq(#11cdef);
-  background-color: #11cdef;
+  background-color: #0077b5;
 }
 
 .btn-info.focus,
@@ -22540,7 +22540,7 @@ hr.horizontal.gray-light {
   overflow-y: auto;
   padding: 0;
   box-shadow: none;
-  z-index: 9999;
+  z-index: 99;
 }
 
 .navbar-vertical.navbar-expand-xs .navbar-collapse {
