--- a/src/main/resources/templates/catalogos/conf_msjs.html
+++ b/src/main/resources/templates/catalogos/conf_msjs.html
@@ -17,241 +17,103 @@
 				<div class="col-12">
 					<div class="card mb-4">
 						<div class="card-header pb-0">
-							<i class="fa-regular fa-rectangle-list card_header_icon"></i>
-							<h5 class="text-pr">C&aacute;talogo Configuraci&oacute;n de Mensajes</h5>
+							<i class="fa-regular fa-rectangle-list card_header_icon text-primary"></i>
+							<h5 class="text-pr text-primary">C&aacute;talogo Configuraci&oacute;n de Mensajes</h5>
 						</div>
 						<div class="card-body px-0 pt-0 pb-2">
+							<div class="row d-flex justify-content-center">
+								<div class="border box-info-st border-left-success p-3 m-3 col-1 text-center">
+									<span class="text-xg font-weight-bold text">VALIDACI&Oacute;N</span>
+									<span class="text-xg font-weight-bold numeric">00</span>
+								</div>
+								<div
+									class="border box-info-st border-left-danger p-3 m-3 col-1 text-center">
+									<span class="text-xg font-weight-bold text-dark text">GESTI&Oacute;N</span>
+									<span class="text-xg font-weight-bold text-dark numeric">00</span>
+								</div>
+								<div
+									class="border box-info-st border-left-success p-3 m-3 col-1 text-center">
+									<span class="text-xg font-weight-bold text">ACOMPANA</span>
+									<span class="text-xg font-weight-bold numeric">00</span>
+								</div>
+								<div
+									class="border box-info-st border-left-warning p-3 m-3 col-1 text-center">
+									<span class="text-xg font-weight-bold text">VINCULACI&Oacute;N</span>
+									<span class="text-xg font-weight-bold numeric">00</span>
+								</div>
+								<div
+									class="border box-info-st border-left-success p-3 m-3 col-1 text-center">
+									<span class="text-xg font-weight-bold text">T&Eacute;RMINO</span>
+									<span class="text-xg font-weight-bold numeric">00</span>
+								</div>
+							</div>
+							<p class="text-center text-danger fs-5">Detalle de la tabla de datos de Gesti&oacute;n pues reporta un aumento anormal de casos negativos que impactan los resultados.</p>
 							<div class="table-responsive p-0">
-								<table
-									class="table align-items-center justify-content-center mb-0 table-striped">
+								<table style="border-top: #be1212 !important;"
+									class="table align-items-center justify-content-center mb-0 table-striped table-bordered">
 									<thead>
 										<tr>
-											<th class="text-uppercase text-dark fs-6 font-weight-bolder ">Proyecto</th>
-											<th
-												class="text-uppercase text-dark fs-6 font-weight-bolder  ps-2">Presupuesto</th>
-											<th
-												class="text-uppercase text-dark fs-6 font-weight-bolder  ps-2">Status</th>
-											<th
-												class="text-uppercase text-dark fs-6 font-weight-bolder text-center ps-2">Avance</th>
-											<th></th>
+											<th width="5px"></th>
+											<th class="text-uppercase text-primary fs-6 font-weight-bolder ">Folio Intercambio</th>
+											<th class="text-uppercase text-primary fs-6 font-weight-bolder  ps-2">Folio Solicitud</th>
+											<th class="text-uppercase text-primary fs-6 font-weight-bolder  ps-2">Streaming</th>
+											<th class="text-uppercase text-primary fs-6 font-weight-bolder text-center ps-2">Producto</th>
+											<th class="text-uppercase text-primary fs-6 font-weight-bolder  ps-2">Movimiento</th>
+											<th class="text-uppercase text-primary fs-6 font-weight-bolder  ps-2">Estatus</th>
+											<th class="text-uppercase text-primary fs-6 font-weight-bolder text-center ps-2">Motivo</th>
 										</tr>
 									</thead>
 									<tbody>
 										<tr>
-											<td>
-												<div class="d-flex px-2">
-													<div>
-														<i class="fa-regular fa-square-caret-right me-2 fs-4"></i>
-													</div>
-													<div class="my-auto">
-														<h6 class="mb-0 text-sg">Spotify</h6>
-													</div>
-												</div>
-											</td>
-											<td>
-												<p class="text-sg font-weight-bold mb-0">$2,500</p>
-											</td>
-											<td><span class="text-xg font-weight-bold">trabajando</span>
-											</td>
-											<td class="align-middle text-center">
-												<div
-													class="d-flex align-items-center justify-content-center">
-													<span class="me-2 text-xg font-weight-bold">60%</span>
-													<div>
-														<div class="progress">
-															<div class="progress-bar bg-gradient-info"
-																role="progressbar" aria-valuenow="60" aria-valuemin="0"
-																aria-valuemax="100" style="width: 60%;"></div>
-														</div>
-													</div>
-												</div>
-											</td>
-											<td class="align-middle">
-												<button class="btn btn-link text-secondary mb-0">
-													<i class="fa-solid fa-chevron-right text-xg"></i>
-												</button>
-											</td>
+											<td><span class="text-xg font-weight-bold">01</span>
+											<td><span class="text-xg font-weight-bold">00203</span>
+											<td><span class="text-xg font-weight-bold">00633</span>
+											<td><span class="text-xg font-weight-bold">AMAZON</span>
+											<td><span class="text-xg font-weight-bold">AMABN</span>
+											<td><span class="text-xg font-weight-bold">Alta</span>
+											<td><span class="text-xg font-weight-bold">Pendiente</span>
+											<td><span class="text-xg font-weight-bold">En espera de Consumo de G3</span>
 										</tr>
 										<tr>
-											<td>
-												<div class="d-flex px-2">
-													<div>
-														<i class="fa-regular fa-square-caret-right me-2 fs-4"></i>
-													</div>
-													<div class="my-auto">
-														<h6 class="mb-0 text-sg">Invision</h6>
-													</div>
-												</div>
-											</td>
-											<td>
-												<p class="text-sg font-weight-bold mb-0">$5,000</p>
-											</td>
-											<td><span class="text-xg font-weight-bold">realizado</span>
-											</td>
-											<td class="align-middle text-center">
-												<div
-													class="d-flex align-items-center justify-content-center">
-													<span class="me-2 text-xg font-weight-bold">100%</span>
-													<div>
-														<div class="progress">
-															<div class="progress-bar bg-gradient-success"
-																role="progressbar" aria-valuenow="100" aria-valuemin="0"
-																aria-valuemax="100" style="width: 100%;"></div>
-														</div>
-													</div>
-												</div>
-											</td>
-											<td class="align-middle">
-												<button class="btn btn-link text-secondary mb-0"
-													aria-haspopup="true" aria-expanded="false">
-													<i class="fa-solid fa-chevron-right text-xg"></i>
-												</button>
-											</td>
+											<td><span class="text-xg font-weight-bold">02</span>
+											<td><span class="text-xg font-weight-bold">00203</span>
+											<td><span class="text-xg font-weight-bold">00633</span>
+											<td><span class="text-xg font-weight-bold">AMAZON</span>
+											<td><span class="text-xg font-weight-bold">AMABN</span>
+											<td><span class="text-xg font-weight-bold">Alta</span>
+											<td><span class="text-xg font-weight-bold">Pendiente</span>
+											<td><span class="text-xg font-weight-bold">En espera de Consumo de G3</span>
 										</tr>
 										<tr>
-											<td>
-												<div class="d-flex px-2">
-													<div>
-														<i class="fa-regular fa-square-caret-right me-2 fs-4"></i>
-													</div>
-													<div class="my-auto">
-														<h6 class="mb-0 text-sg">Jira</h6>
-													</div>
-												</div>
-											</td>
-											<td>
-												<p class="text-sg font-weight-bold mb-0">$3,400</p>
-											</td>
-											<td><span class="text-xg font-weight-bold">cancelado</span>
-											</td>
-											<td class="align-middle text-center">
-												<div
-													class="d-flex align-items-center justify-content-center">
-													<span class="me-2 text-xg font-weight-bold">30%</span>
-													<div>
-														<div class="progress">
-															<div class="progress-bar bg-gradient-danger"
-																role="progressbar" aria-valuenow="30" aria-valuemin="0"
-																aria-valuemax="30" style="width: 30%;"></div>
-														</div>
-													</div>
-												</div>
-											</td>
-											<td class="align-middle">
-												<button class="btn btn-link text-secondary mb-0"
-													aria-haspopup="true" aria-expanded="false">
-													<i class="fa-solid fa-chevron-right text-xg"></i>
-												</button>
-											</td>
+											<td><span class="text-xg font-weight-bold">03</span>
+											<td><span class="text-xg font-weight-bold">00203</span>
+											<td><span class="text-xg font-weight-bold">00633</span>
+											<td><span class="text-xg font-weight-bold">AMAZON</span>
+											<td><span class="text-xg font-weight-bold">AMABN</span>
+											<td><span class="text-xg font-weight-bold">Alta</span>
+											<td><span class="text-xg font-weight-bold">Pendiente</span>
+											<td><span class="text-xg font-weight-bold">En espera de Consumo de G3</span>
 										</tr>
 										<tr>
-											<td>
-												<div class="d-flex px-2">
-													<div>
-														<i class="fa-regular fa-square-caret-right me-2 fs-4"></i>
-													</div>
-													<div class="my-auto">
-														<h6 class="mb-0 text-sg">Slack</h6>
-													</div>
-												</div>
-											</td>
-											<td>
-												<p class="text-sg font-weight-bold mb-0">$1,000</p>
-											</td>
-											<td><span class="text-xg font-weight-bold">cancelado</span>
-											</td>
-											<td class="align-middle text-center">
-												<div
-													class="d-flex align-items-center justify-content-center">
-													<span class="me-2 text-xg font-weight-bold">0%</span>
-													<div>
-														<div class="progress">
-															<div class="progress-bar bg-gradient-success"
-																role="progressbar" aria-valuenow="0" aria-valuemin="0"
-																aria-valuemax="0" style="width: 0%;"></div>
-														</div>
-													</div>
-												</div>
-											</td>
-											<td class="align-middle">
-												<button class="btn btn-link text-secondary mb-0"
-													aria-haspopup="true" aria-expanded="false">
-													<i class="fa-solid fa-chevron-right text-xg"></i>
-												</button>
-											</td>
+											<td><span class="text-xg font-weight-bold">04</span>
+											<td><span class="text-xg font-weight-bold">00203</span>
+											<td><span class="text-xg font-weight-bold">00633</span>
+											<td><span class="text-xg font-weight-bold">AMAZON</span>
+											<td><span class="text-xg font-weight-bold">AMABN</span>
+											<td><span class="text-xg font-weight-bold">Alta</span>
+											<td><span class="text-xg font-weight-bold">Pendiente</span>
+											<td><span class="text-xg font-weight-bold">En espera de Consumo de G3</span>
 										</tr>
 										<tr>
-											<td>
-												<div class="d-flex px-2">
-													<div>
-														<i class="fa-regular fa-square-caret-right me-2 fs-4"></i>
-													</div>
-													<div class="my-auto">
-														<h6 class="mb-0 text-sg">Webdev</h6>
-													</div>
-												</div>
-											</td>
-											<td>
-												<p class="text-sg font-weight-bold mb-0">$14,000</p>
-											</td>
-											<td><span class="text-xg font-weight-bold">trabajando</span>
-											</td>
-											<td class="align-middle text-center">
-												<div
-													class="d-flex align-items-center justify-content-center">
-													<span class="me-2 text-xg font-weight-bold">80%</span>
-													<div>
-														<div class="progress">
-															<div class="progress-bar bg-gradient-info"
-																role="progressbar" aria-valuenow="80" aria-valuemin="0"
-																aria-valuemax="80" style="width: 80%;"></div>
-														</div>
-													</div>
-												</div>
-											</td>
-											<td class="align-middle">
-												<button class="btn btn-link text-secondary mb-0"
-													aria-haspopup="true" aria-expanded="false">
-													<i class="fa-solid fa-chevron-right text-xg"></i>
-												</button>
-											</td>
-										</tr>
-										<tr>
-											<td>
-												<div class="d-flex px-2">
-													<div>
-														<i class="fa-regular fa-square-caret-right me-2 fs-4"></i>
-													</div>
-													<div class="my-auto">
-														<h6 class="mb-0 text-sg">Adobe XD</h6>
-													</div>
-												</div>
-											</td>
-											<td>
-												<p class="text-sg font-weight-bold mb-0">$2,300</p>
-											</td>
-											<td><span class="text-xg font-weight-bold">realizado</span>
-											</td>
-											<td class="align-middle text-center">
-												<div
-													class="d-flex align-items-center justify-content-center">
-													<span class="me-2 text-xg font-weight-bold">100%</span>
-													<div>
-														<div class="progress">
-															<div class="progress-bar bg-gradient-success"
-																role="progressbar" aria-valuenow="100" aria-valuemin="0"
-																aria-valuemax="100" style="width: 100%;"></div>
-														</div>
-													</div>
-												</div>
-											</td>
-											<td class="align-middle">
-												<button class="btn btn-link text-secondary mb-0"
-													aria-haspopup="true" aria-expanded="false">
-													<i class="fa-solid fa-chevron-right text-xg"></i>
-												</button>
-											</td>
-										</tr>
+											<td><span class="text-xg font-weight-bold">05</span>
+											<td><span class="text-xg font-weight-bold">00203</span>
+											<td><span class="text-xg font-weight-bold">00633</span>
+											<td><span class="text-xg font-weight-bold">AMAZON</span>
+											<td><span class="text-xg font-weight-bold">AMABN</span>
+											<td><span class="text-xg font-weight-bold">Alta</span>
+											<td><span class="text-xg font-weight-bold">Pendiente</span>
+											<td><span class="text-xg font-weight-bold">En espera de Consumo de G3</span>
+										</tr>										
 									</tbody>
 								</table>
 							</div>
