--- a/src/main/resources/templates/catalogos/errores.html
+++ b/src/main/resources/templates/catalogos/errores.html
@@ -17,13 +17,87 @@
 				<div class="col-12">
 					<div class="card mb-4">
 						<div class="card-header pb-0">
-							<i class="fa-regular fa-rectangle-list card_header_icon"></i>
-							<h5 class="text-pr">C&aacute;talogo de Errores</h5>
+							<i class="fa-regular fa-rectangle-list card_header_icon text-primary"></i>
+							<h5 class="text-pr text-primary">C&aacute;talogo de Errores</h5>
 						</div>
 						<div class="card-body px-0 pt-0 pb-2">
+							<button type="button" class="btn btn-info m-2 ps-3 pe-3"
+								data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+								<i class="fa-solid fa-plus fs-4"></i>
+							</button>
+							<!-- Modal -->
+							<div class="modal fade" id="staticBackdrop"
+								data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+								aria-labelledby="staticBackdropLabel" aria-hidden="true">
+								<div class="modal-dialog">
+									<div class="modal-content">
+										<div class="modal-header">
+											<h5 class="modal-title" id="staticBackdropLabel">Alta</h5>
+											<button type="button" class="btn-close"
+												data-bs-dismiss="modal" aria-label="Close"></button>
+										</div>
+										<div class="modal-body">
+											<form class="row g-3">
+												<div class="col-md-6">
+													<label for="inputEmail4" class="form-label">Email</label> <input
+														type="email" class="form-control" id="inputEmail4">
+												</div>
+												<div class="col-md-6">
+													<label for="inputPassword4" class="form-label">Password</label>
+													<input type="password" class="form-control"
+														id="inputPassword4">
+												</div>
+												<div class="col-12">
+													<label for="inputAddress" class="form-label">Address</label>
+													<input type="text" class="form-control" id="inputAddress"
+														placeholder="1234 Main St">
+												</div>
+												<div class="col-12">
+													<label for="inputAddress2" class="form-label">Address
+														2</label> <input type="text" class="form-control"
+														id="inputAddress2"
+														placeholder="Apartment, studio, or floor">
+												</div>
+												<div class="col-md-6">
+													<label for="inputCity" class="form-label">City</label> <input
+														type="text" class="form-control" id="inputCity">
+												</div>
+												<div class="col-md-4">
+													<label for="inputState" class="form-label">State</label> <select
+														id="inputState" class="form-select">
+														<option selected>Choose...</option>
+														<option>...</option>
+													</select>
+												</div>
+												<div class="col-md-2">
+													<label for="inputZip" class="form-label">Zip</label> <input
+														type="text" class="form-control" id="inputZip">
+												</div>
+												<div class="col-12">
+													<div class="form-check">
+														<input class="form-check-input" type="checkbox"
+															id="gridCheck"> <label class="form-check-label"
+															for="gridCheck"> Check me out </label>
+													</div>
+												</div>
+												<div class="col-12">
+													<button type="submit" class="btn btn-primary">Sign
+														in</button>
+												</div>
+											</form>
+										</div>
+										<div class="modal-footer">
+											<button type="button" class="btn btn-secondary"
+												data-bs-dismiss="modal">Cancelar</button>
+											<button type="button" class="btn btn-primary">Aceptar</button>
+										</div>
+									</div>
+								</div>
+							</div>
+							<!-- Fin Modal -->
 							<div class="table-responsive p-0">
 								<table
-									class="table align-items-center justify-content-center mb-0 table-striped">
+									class="table align-items-center justify-content-center mb-0 table-striped table-bordered">
 									<thead>
 										<tr>
 											<th class="text-uppercase text-dark fs-6 font-weight-bolder ">Proyecto</th>
