--- a/src/main/resources/static/resources/css/index.css
+++ b/src/main/resources/static/resources/css/index.css
@@ -479,6 +479,11 @@ a:hover{
 .box-info-st.bg-box-success {
     background: #46ab09 !important;
 }
+
+.hr-danger {
+	border-bottom: 1px solid #be1212 !important;
+    opacity: 1 !important;
+}
 /* .................................................................................................................. GENERAL FIN */
 
 /* .................................................................................................................. MEDIA INI */
