--- a/src/main/resources/templates/catalogos/conf_msjs.html
+++ b/src/main/resources/templates/catalogos/conf_msjs.html
@@ -48,8 +48,9 @@
 								</div>
 							</div>
 							<p class="text-center text-danger fs-5">Detalle de la tabla de datos de Gesti&oacute;n pues reporta un aumento anormal de casos negativos que impactan los resultados.</p>
-							<div class="table-responsive p-0">
-								<table style="border-top: #be1212 !important;"
+							<hr class="hr-danger m-0"/>
+							<div class="table-responsive">
+								<table 
 									class="table align-items-center justify-content-center mb-0 table-striped table-bordered">
 									<thead>
 										<tr>
