--- a/src/main/resources/templates/catalogos/errores.html
+++ b/src/main/resources/templates/catalogos/errores.html
@@ -20,7 +20,7 @@
 							<i class="fa-regular fa-rectangle-list card_header_icon text-primary"></i>
 							<h5 class="text-pr text-primary">C&aacute;talogo de Errores</h5>
 						</div>
-						<div class="card-body px-0 pt-0 pb-2">
+						<div class="card-body p-4">
 							<button type="button" class="btn btn-info m-2 ps-3 pe-3"
 								data-bs-toggle="modal" data-bs-target="#staticBackdrop">
 								<i class="fa-solid fa-plus fs-4"></i>
