--- a/src/main/resources/templates/catalogos/etapas.html
+++ b/src/main/resources/templates/catalogos/etapas.html
@@ -20,7 +20,7 @@
 							<i class="fa-regular fa-rectangle-list card_header_icon"></i>
 							<h5 class="text-pr text-primary">C&aacute;talogo de Etapas</h5>
 						</div>
-						<div class="card-body px-0 pt-0 pb-2">
+						<div class="card-body p-4">
 							<div class="table-responsive p-0">
 								<table
 									class="table align-items-center justify-content-center mb-0 table-hover table-striped table-bordered">
@@ -230,7 +230,7 @@
 							<i class="fa-regular fa-rectangle-list card_header_icon"></i>
 							<h5 class="text-pr text-primary">Verificaci&oacute;n Entradas</h5>
 						</div>
-						<div class="card-body px-0 pt-0 pb-2">
+						<div class="card-body p-4">
 							<div class="table-responsive p-0">
 								<h5 class="card-title p-2 bg-info text-light text-center"><strong>NETFLIX / 00196661 / Validaci&oacute;n</strong></h5>
 								<table
