--- a/src/main/resources/templates/catalogos/productos.html
+++ b/src/main/resources/templates/catalogos/productos.html
@@ -20,7 +20,7 @@
 							<i class="fa-regular fa-rectangle-list card_header_icon text-primary"></i>
 							<h5 class="text-pr text-primary">C&aacute;talogo de Productos</h5>
 						</div>
-						<div class="card-body px-0 pt-0 pb-2">
+						<div class="card-body p-4">
 							<div class="table-responsive p-0">
 								<table
 									class="table align-items-center justify-content-center mb-0 table-striped">
