--- a/src/main/resources/templates/dashboard/comparativo_ventas_streaming.html
+++ b/src/main/resources/templates/dashboard/comparativo_ventas_streaming.html
@@ -26,9 +26,7 @@
 							<h5 class="text-pr text-primary">Compatrativos de ventas en servicios de
 								Streaming</h5>
 						</div>
-						<div class="card-body px-0 pt-0 pb-2">
-							
-
+						<div class="card-body p-4">
 							<!-- Chart code -->
 							<script src="./resources/js/charts/charts.js"></script>
 
