--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -177,8 +177,7 @@
 							<li class="nav-item d-flex px-3 align-items-center"><a id="cerrar_sesion"
 								href="login"
 								class="nav-link text-nav-top font-weight-bold px-0 fs-5"> <i
-									class="fa fa-solid fa-right-from-bracket "></i> <span
-									class="d-sm-inline d-none ">Cerrar Sesión</span>
+									class="fa fa-solid fa-right-from-bracket "></i>
 							</a></li>
 						</ul>
 					</div>
