--- a/src/main/resources/templates/catalogos/conf_msjs.html
+++ b/src/main/resources/templates/catalogos/conf_msjs.html
@@ -19,6 +19,7 @@
 						<div class="card-header pb-0">
 							<i class="fa-regular fa-rectangle-list card_header_icon text-primary"></i>
 							<h5 class="text-pr text-primary">C&aacute;talogo Configuraci&oacute;n de Mensajes</h5>
+							<span class="text-date text-dark"></span>
 						</div>
 						<div class="card-body p-4">
 							<div class="row d-flex justify-content-center">
